--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 html,
 body {
   padding: 0;
+  background-color: #000000 !important;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
