change window scroll to intersection observer

--- a/styles/card.module.css
+++ b/styles/card.module.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 .card {
   padding: 0;
-  /* position: relative; */
+  position: relative;
   cursor: pointer;
 }
 .card__image {
@@ -20,12 +20,30 @@
   color: white;
   /* transform: translateY(130%); */
   /* top: 0; */
+  /* bottom: 0; */
+  /* top: 0; */
   bottom: 0;
   transition: all .6s ease-in-out;
   -webkit-transition: all .6s ease-in-out;
   -moz-transition: all .6s ease-in-out;
   -o-transition: all .6s ease-in-out;
+  z-index: 3;
 }
+
+.card__body-container-detail {
+  margin: 0 0 0 0.8rem;
+  position: absolute;
+  color: white;
+  /* transform: translateY(130%); */
+  /* top: 0; */
+  bottom: 10%;
+  transition: all .6s ease-in-out;
+  -webkit-transition: all .6s ease-in-out;
+  -moz-transition: all .6s ease-in-out;
+  -o-transition: all .6s ease-in-out;
+  z-index: 3;
+}
+
 .card-tags {
   background: rgba(0, 255, 255, 0.199);
   color: #0FEFFD;
@@ -54,6 +72,16 @@
   max-width: 300px;
   /* background: linear-gradient(180deg, rgba(29, 29, 29, 0) 0%, rgba(29, 29, 29, 0.8) 80.79%); */
 }
+.card__image-container-detail {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  overflow: hidden;
+  /* height: 500px; */
+  /* max-height: 480px;
+  max-width: 300px; */
+  /* background: linear-gradient(180deg, rgba(29, 29, 29, 0) 0%, rgba(29, 29, 29, 0.8) 80.79%); */
+}
 .card-image {
   /* background: linear-gradient(180deg, rgba(29, 29, 29, 0) 0%, rgba(29, 29, 29, 0.8) 80.79%), url('https://image.tmdb.org/t/p/w500/7uRbWOXxpWDMtnsd2PF3clu65jc.jpg'); */
   background-color: linear-gradient(180deg, rgba(29, 29, 29, 0) 0%, rgba(29, 29, 29, 0.8) 80.79%);
@@ -66,14 +94,18 @@
   -moz-transition: all .6s ease-in-out;
   -o-transition: all .6s ease-in-out;
 }
-/* .card-image:hover {
-  height: 520px;
+.card-image-detail {
+  /* background: linear-gradient(180deg, rgba(29, 29, 29, 0) 0%, rgba(29, 29, 29, 0.8) 80.79%), url('https://image.tmdb.org/t/p/w500/7uRbWOXxpWDMtnsd2PF3clu65jc.jpg'); */
+  background-color: linear-gradient(180deg, rgba(29, 29, 29, 0) 0%, rgba(29, 29, 29, 0.8) 80.79%);
+  background-size: cover;
+  background-position: center;
   width: 300px;
-} */
-
-/* .card__body-container:hover , .card__image-container > .card-image:hover {
-  transform: translate(10%, -200%);
-} */
+  height: 500px;
+  transition: all .6s ease-in-out;
+  -webkit-transition: all .6s ease-in-out;
+  -moz-transition: all .6s ease-in-out;
+  -o-transition: all .6s ease-in-out;
+}
 
 .card:hover .card-image {
   height: 520px;
@@ -82,7 +114,6 @@
 
 .card:hover .card__body-container {
   bottom: 5%;
-  /* transform: translateY(-40%); */
 }
 
 .card:hover .card-watch-now {
@@ -108,4 +139,14 @@
 
 .swiper-pagination-bullet-active {
   background-color: #fff !important;
+}
+
+.card-release-year {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 32px;
+  opacity: 0.6;
+  margin-left: 10px;
 }
